--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "authors": [
         {
             "name": "Asep Muhamad",
-            "email": "asepmuhamad@gmail.com",
+            "email": "asepmuhamad@gmail.com"
         },
         {
             "name": "Rebing OÜ",
